# SimpleITKLuaRock

./: CMakeLists.txt  README.md  circle.yml  simpleitk-0.10-0.rockspec  simpleitk-1.0-0.rockspec  simpleitk-1.0.1-0.rockspec  simpleitk-1.1.0-0.rockspec  simpleitk-1.2.2-0.rockspec
.circleci/: config.yml
docs/: making-a-custom-rock.md
